# iot-swarm

./: .gitattributes  .gitignore  README.MD  docker-compose.yaml  loggers.ini  pyproject.toml
.github/workflows/: doc-deployment.yml  doc-test.yml  pipeline.yml  release.yml  static.yml  test-pipeline.yml  test.yml
docs/: Makefile  conf.py  example-config.cfg  index.rst  make.sh
docs/source/: cli.rst  iotdevicesimulator.awsiot.rst  iotdevicesimulator.iot.rst  iotdevicesimulator.messaging.rst  iotdevicesimulator.mqtt.rst  iotdevicesimulator.rst  iotdevicesimulator.scripts.rst  iotswarm.messaging.rst  iotswarm.rst  iotswarm.scripts.rst  modules.rst
src/iotdevicesimulator/: __init__.py  db.py  devices.py  example.py  loggers.py  queries.py  swarm.py  utils.py
src/iotdevicesimulator/__assets__/: configs.cfg  loggers.ini
src/iotdevicesimulator/awsiot/: mqttHandler.py
src/iotdevicesimulator/messaging/: aws.py  core.py  utils.py
src/iotdevicesimulator/mqtt/: aws.py  core.py
src/iotdevicesimulator/scripts/: cli.py
src/iotswarm/: __init__.py  db.py  devices.py  example.py  loggers.py  processing.py  queries.py  session.py  swarm.py  utils.py
src/iotswarm/__assets__/: live_cosmos_tests.cfg  loggers.ini
src/iotswarm/__assets__/data/: build_database.py  cosmos.db
src/iotswarm/livecosmos/: __main__.py  liveupload.py  loggers.py  state.py  utils.py
src/iotswarm/livecosmos/__assets__/: logger.ini
src/iotswarm/livecosmos/scripts/: cli.py
src/iotswarm/messaging/: aws.py  core.py
src/iotswarm/scripts/: cli.py  common.py
src/tests/: test_cli.py  test_db.py  test_devices.py  test_loggers.py  test_messaging.py  test_queries.py  test_sessions.py  test_swarm.py
src/tests/data/: ALIC1_4_ROWS.csv  build_database.py  database.db
tests/: test_cli.py  test_db.py  test_devices.py  test_messaging.py  test_swarm.py
tests/data/: build_database.py
tests/livecosmos/: test_livecosmos_liveupload.py  test_state.py  test_utils.py
tests/livecosmos/end_to_end/: test_livecosmos.py
