[build-system]
requires = ["setuptools >= 61.0", "autosemver"]
# build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "platformdirs",
    "boto3",
    "autosemver",
    "config",
    "click",
    "docutils<0.17",
    "awscli",
    "awscrt",
    "awsiotsdk",
    "oracledb",
    "backoff",
    "pandas",
]
name = "iot-swarm"
dynamic = ["version"]
authors = [{ name = "Lewis Chambers", email = "lewcha@ceh.ac.uk" }]
description = "Package for simulating a net of IoT devices for stress testing."

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-asyncio", "parameterized"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme", "sphinx-click"]

[project.scripts]
iot-swarm = "iotswarm.scripts.cli:main"

[tool.setuptools]
include-package-data = false
package-data = {}

[tool.setuptools.dynamic]
version = { attr = "iotswarm.__version__" }


[tool.setuptools.packages.find]
where = ["src"]
include = ["iotswarm*"]
exclude = ["tests*"]

[tool.pytest.ini_options]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]
addopts = "--cov=iotswarm"
markers = [
    "asyncio: Tests asynchronous functions.",
    "oracle: Requires oracle connection and required config credentials",
    "slow: Marks slow tests",
]

[tool.coverage.run]
omit = [
    "*example.py",
    "*__init__.py",
    "queries.py",
    "loggers.py",
    "**/scripts/*.py",
    "**/build_database.py",
    "utils.py",
]
